tests/errors/externStructBadField.milo
// @error: is not C-representable
// string carries drop glue + non-C layout — illegal in an extern struct
extern

struct BadRec {
    id: i32,
    name: string,
}

fn main(): i32 {
    return 0
}
